src/objects/AMS_EBulletin_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>In_Use__c</fullName>
        <defaultValue>true</defaultValue>
        <label>In Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Order__c</fullName>
        <label>Number Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AMS EBulletin Setting</label>
    <pluralLabel>AMS EBulletin Settings</pluralLabel>
</CustomObject>